[gd_scene load_steps=2 format=3 uid="uid://cc4701uyf5r76"]

[ext_resource type="Script" uid="uid://bu6suc41k7e6q" path="res://ui/audio_controls.gd" id="1_j8hng"]

[node name="AudioControls" type="MarginContainer" node_paths=PackedStringArray("music_slider", "sfx_slider")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_j8hng")
music_slider = NodePath("AudioVBox/MusicHBox/MusicSlider")
sfx_slider = NodePath("AudioVBox/SfxHBox/SfxSlider")

[node name="AudioVBox" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MusicHBox" type="HBoxContainer" parent="AudioVBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 3

[node name="MusicLabel" type="Label" parent="AudioVBox/MusicHBox"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="AudioVBox/MusicHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.05
tick_count = 11

[node name="SfxHBox" type="HBoxContainer" parent="AudioVBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 3

[node name="SfxLabel" type="Label" parent="AudioVBox/SfxHBox"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "SFX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SfxSlider" type="HSlider" parent="AudioVBox/SfxHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.05
tick_count = 11
